[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/ui/button/BttnReload.png" type="Texture" id=1]
[ext_resource path="res://assets/art/ui/button/BttnDisabled.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ui/panel/PanelMarbleFlat.png" type="Texture" id=3]
[ext_resource path="res://src/Game/GameLayer/Components/ActionableButton.gd" type="Script" id=4]

[node name="ActionableButton" type="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -944.0
margin_bottom = -520.0
texture = ExtResource( 3 )
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40
script = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BttnAction" type="TextureButton" parent="CenterContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 72.0
margin_bottom = 72.0
rect_min_size = Vector2( 64, 64 )
disabled = true
enabled_focus_mode = 0
texture_disabled = ExtResource( 2 )
expand = true

[node name="CooldownBar" type="TextureProgress" parent="CenterContainer"]
margin_left = 8.0
margin_top = 11.0
margin_right = 72.0
margin_bottom = 69.0
rect_min_size = Vector2( 64, 58 )
value = 50.0
texture_progress = ExtResource( 1 )
fill_mode = 4

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="CenterContainer/BttnAction" to="." method="_on_BttnAction_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
